their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version (SVN trunk): 
---------------------------- 

- KML: latlon bbox for raster layers could end up being wrong for non-square requests (#3840)

Version 6.0.0-beta6 (2011-04-13)
--------------------------------

- add configurable PNG/ZLIB compression level (#3841)

- SLD: use pixmap size when parameter size is not specified (#2305)

- fix memory leaks in mapgraticule.c (#3831)

- fix runtime sub validation against web metadata, was using wrong lookup key

- clean up the symbolset if we've used an alternate renderer for a 
  layer (#3834,#3616)

- fix crash on embeded legend with cairo raster renderer

- fix crashes in SVG renderer on polygon symbol fills (#3837)

- fix crash/corruptions with raster layers in pdf outputs (#3799)

- fix memory leak in msFreeLabelCacheSlot (#3829)

- use a circle brush for wide GD lines (#3835)

- fix segmentation fault with transparent layers containing symbols (#3834)

- fix memory leak on tiled vector polygons

- fix segfault with marker symbols on short lines (#3823)

- wms_getmap_formatlist causes first defined outputformat to be returned by 
  getmap (#3826)

- fix building of mapcluster.c when OGR support is disabled

- fix some valgrind found memory leaks (offset symbols, and gd io contexts)

- skip marker symbol with no defined SYMBOL (caused some memory leaks with
  uninitialized vector points)

- fix crash in GD lines with floating point dash patterns (#3823)

- Check renderer before using it when calculating label size (#3822)

- allow palette file path to be relative to mapfile (#2115)

- use supplied offset for brushed lines (#3825, #3792)

- fix division by 0 error in bar charts for some ill-defined cases (#3218)

- add GAP, POSITION and CAPS/JOINS to mapfile writer (#3797)

- fix GEOMTRANSFORM rotation orientation for vector symbols (#3802)
