@@ -35,13 +35,6 @@
 
 MS_CVSID("$Id$")
 
-#ifndef EQUAL
-#define EQUAL(a,b) (strcasecmp(a, b) == 0)
-#endif
-
-#ifndef EQUALN
-#define EQUALN(a,b,n) (strncasecmp(a, b,n) == 0)
-#endif
 
 #ifdef USE_CLUSTER_PLUGIN
 #define USE_CLUSTER_EXTERNAL
