@@ -155,6 +155,24 @@ typedef ms_uint32 *     ms_bitarray;
 #include "ogr_api.h"
 #endif
 
+/* EQUAL and EQUALN are defined in cpl_port.h, so add them in here if ogr was not included */
+
+#ifndef EQUAL
+#if defined(WIN32) || defined(WIN32CE)
+#  define EQUAL(a,b)              (stricmp(a,b)==0)
+#else
+#  define EQUAL(a,b)              (strcasecmp(a,b)==0)
+#endif
+#endif
+
+#ifndef EQUALN
+#if defined(WIN32) || defined(WIN32CE)
+#  define EQUALN(a,b,n)           (strnicmp(a,b,n)==0)
+#else
+#  define EQUALN(a,b,n)           (strncasecmp(a,b,n)==0)
+#endif
+#endif
+
 
 #if defined(_WIN32) && !defined(__CYGWIN__)
 #define snprintf _snprintf
